--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "express": "^5.1.0",
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^9.0.2",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "zod": "^3.25.56"
     },
     "devDependencies": {
@@ -38,6 +40,8 @@
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.29",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "@typescript-eslint/eslint-plugin": "^8.33.1",
         "@typescript-eslint/parser": "^8.33.1",
         "eslint": "^9.28.0",
