--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
         image: postgres:14.1-alpine
         restart: always
         environment:
-            - POSTGRES_USER=myuser
-            - POSTGRES_PASSWORD=mypassword
-            - POSTGRES_DB=taskmanager
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DB}
         ports:
             - '5432:5432'
         volumes:
