--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@prisma/client": "^6.9.0",
         "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "express-async-handler": "^1.2.0",
@@ -37,6 +38,7 @@
     "devDependencies": {
         "@eslint/js": "^9.28.0",
         "@types/bcryptjs": "^3.0.0",
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.29",
