--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "express": "^5.1.0",
         "express-async-handler": "^1.2.0",
         "jsonwebtoken": "^9.0.2",
+        "pino": "^9.9.0",
+        "pino-http": "^10.5.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "zod": "^3.25.56"
@@ -50,6 +52,7 @@
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-prettier": "^5.4.1",
         "globals": "^16.2.0",
+        "pino-pretty": "^13.1.1",
         "prettier": "^3.5.3",
         "prisma": "^6.9.0",
         "tsx": "^4.19.4",
