--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "keywords": [],
     "description": "",
     "dependencies": {
-        "@prisma/client": "^6.9.0",
+        "@prisma/client": "^6.14.0",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "express-async-handler": "^1.2.0",
+        "express-rate-limit": "^8.0.1",
         "jsonwebtoken": "^9.0.2",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "pino": "^9.9.0",
         "pino-http": "^10.5.0",
         "swagger-jsdoc": "^6.2.8",
@@ -44,6 +47,8 @@
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.15.29",
+        "@types/passport": "^1.0.17",
+        "@types/passport-google-oauth20": "^2.0.16",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
         "@typescript-eslint/eslint-plugin": "^8.33.1",
@@ -54,7 +59,7 @@
         "globals": "^16.2.0",
         "pino-pretty": "^13.1.1",
         "prettier": "^3.5.3",
-        "prisma": "^6.9.0",
+        "prisma": "^6.14.0",
         "tsx": "^4.19.4",
         "typescript": "^5.8.3"
     }
