feat: Refactored the whole project services, routes, controllers to use inversify for robustness and comfort using

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ Thumbs.db
 /src/generated/prisma
 
 api.http
+
+/src/locking.ts
+/src/transaction-success.ts
+/src/transaction.ts
+/src/playground.sql
