--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
         "express": "^5.1.0",
         "express-async-handler": "^1.2.0",
         "express-rate-limit": "^8.0.1",
+        "inversify": "^7.9.1",
+        "inversify-express-utils": "^6.5.0",
         "jsonwebtoken": "^9.0.2",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pino": "^9.9.0",
         "pino-http": "^10.5.0",
+        "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "zod": "^3.25.56"
@@ -50,6 +53,7 @@
         "@types/node": "^22.15.29",
         "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
+        "@types/reflect-metadata": "^0.0.5",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
         "@typescript-eslint/eslint-plugin": "^8.33.1",
