--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
+        "yamljs": "^0.3.0",
         "zod": "^3.25.56"
     },
     "devDependencies": {
@@ -54,6 +55,7 @@
         "@types/reflect-metadata": "^0.1.0",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
+        "@types/yamljs": "^0.2.34",
         "pino-pretty": "^11.2.1",
         "prisma": "^6.9.0",
         "tsx": "^4.19.4",
