--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.9.0",
+        "axios": "^1.11.0",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
