--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,15 +15,15 @@ services:
 
     # Service 2: NGINX Reverse Proxy ('nginx')
     nginx:
-        image: nginx:stable-alpine
+        build:
+            context: .
+            dockerfile: ./nginx/Dockerfile
         ports:
-            # This is the main entry point. It maps port 80 on your host machine
-            # to port 80 inside the NGINX container.
-            - '8080:8080'
+            - '80:80'
+            - '443:443'
         volumes:
-            # This mounts our custom nginx.conf file into the container,
-            # overwriting the default configuration.
-            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - /etc/letsencrypt:/etc/letsencrypt:ro
+            - /var/www/html:/var/www/html
         depends_on:
             - app # NGINX won't start until our 'app' container is ready.
 
