--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "inversify": "^6.0.2",
         "inversify-express-utils": "^6.5.0",
         "jsonwebtoken": "^9.0.2",
+        "npm": "^11.6.0",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pino": "^9.2.0",
