--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ deploy_to_server:
     before_script:
         - 'apk update && apk add openssh-client'
         - 'eval $(ssh-agent -s)'
+        - 'chmod 600 "$SSH_PRIVATE_KEY_FILE"'
         - 'ssh-add "$SSH_PRIVATE_KEY_FILE"'
         - 'mkdir -p ~/.ssh'
         - 'chmod 700 ~/.ssh'
