--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,8 +42,10 @@ deploy_to_server:
     before_script:
         - 'apk update && apk add openssh-client'
         - 'eval $(ssh-agent -s)'
-        - 'chmod 600 "$SSH_PRIVATE_KEY_FILE"'
-        - 'ssh-add "$SSH_PRIVATE_KEY_FILE"'
+        - 'echo "$SSH_PRIVATE_KEY_FILE" > id_ed25519_gitlab'
+        - 'echo "" >> id_ed25519_gitlab'
+        - 'chmod 600 id_ed25519_gitlab'
+        - 'ssh-add id_ed25519_gitlab'
         - 'mkdir -p ~/.ssh'
         - 'chmod 700 ~/.ssh'
         - 'ssh-keyscan 3.75.211.159 >> ~/.ssh/known_hosts'
