--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ deploy_to_server:
         - |
             ssh ubuntu@3.75.211.159 << 'EOF'
               echo "--- Logging into production server ---"
-              cd ~/webservertaskManager
+              cd ~/webserver_taskmanager
               echo "--- Pulling latest code ---"
               git pull
               echo "--- Building and restarting application ---"
