feat: decoupled server's runtime configuration from its source code, added APP_IMAGE to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 services:
     # Service 1: Our Application ('app')
     app:
-        build: .
+        image: ${APP_IMAGE}
         restart: always
-        ports:
-            - '3000:3000'
         env_file:
-            - ./docker.env
+            - .env
         depends_on:
             - db
 
