--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ deploy_to_server:
               echo "--- Pulling latest code ---"
               git pull
               echo "--- Building and restarting application ---"
-              docker compose up --build -d
+              docker compose up -d --remove-orphans ap
               echo "--- Applying database migrations ---"
               docker compose exec app npx prisma migrate deploy
               echo "--- DEPLOYMENT COMPLETE ---"
