--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,12 +38,10 @@ deploy_to_server:
 
     before_script:
         - 'eval $(ssh-agent -s)'
-        - 'echo "$SSH_PRIVATE_KEY_FILE" > id_ed25519_gitlab'
-        - 'echo "" >> id_ed25519_gitlab'
-        - 'chmod 600 id_ed25519_gitlab'
-        - 'ssh-add id_ed25519_gitlab'
+        - 'echo "$SSH_PRIVATE_KEY_FILE" | base64 -d | ssh-add -'
         - 'mkdir -p ~/.ssh && chmod 700 ~/.ssh'
-        - 'ssh-keyscan 3.75.211.159 >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts'
+        - 'ssh-keyscan 3.75.211.159 >> ~/.ssh/known_hosts'
+        - 'chmod 644 ~/.ssh/known_hosts'
 
     script:
         - |
