--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: docker:latest
 stages:
     - build
     - test
-    - deploy
+    - push
 
 services:
     - name: docker:dind
@@ -11,7 +11,6 @@ services:
 
 variables:
     APP_IMAGE: $CI_REGISTRY_IMAGE/app:$CI_COMMIT_SHA
-    DEPLOY_IMAGE: $CI_REGISTRY_IMAGE/deploy:latest
 
 build_app:
     stage: build
@@ -32,39 +31,12 @@ run_tests:
     script:
         - 'echo "CRITICAL: No automated tests found. This is a placeholder stage."'
 
-deploy_to_server:
-    stage: deploy
-    image: $DEPLOY_IMAGE
-
-    before_script:
-        - 'eval $(ssh-agent -s)'
-        - 'echo "$SSH_PRIVATE_KEY_FILE" | base64 -d | ssh-add -'
-        - 'mkdir -p ~/.ssh && chmod 700 ~/.ssh'
-        - 'ssh-keyscan 3.75.211.159 >> ~/.ssh/known_hosts'
-        - 'chmod 644 ~/.ssh/known_hosts'
-
+tag_latest:
+    stage: push
     script:
-        - |
-            ssh ubuntu@3.75.211.159 "
-              echo '--- Logging into production server ---'
-              cd ~/webservertaskManager
-
-              echo '--- Setting the new image variable ---'
-              export APP_IMAGE=${APP_IMAGE}
-              
-              echo '--- Pulling the new application image from GitLab Registry: ${APP_IMAGE} ---'
-              docker compose pull app
-
-              echo '--- Bringing down the old stack and starting the new one ---'
-              docker compose up -d
-              
-              echo '--- Applying any new database migrations ---'
-              # We add a small sleep to ensure the app container is ready.
-              sleep 5 
-              docker compose exec app npx prisma migrate deploy
-              
-              echo '--- DEPLOYMENT COMPLETE ---'
-            "
-
+        - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+        - docker pull $APP_IMAGE
+        - docker tag $APP_IMAGE $CI_REGISTRY_IMAGE/app:latest
+        - docker push $CI_REGISTRY_IMAGE/app:latest
     rules:
         - if: '$CI_COMMIT_BRANCH == "main"'
