--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: docker:latest
 stages:
     - build
     - test
-    - push
+    - deploy
 
 services:
     - name: docker:dind
@@ -13,31 +13,35 @@ variables:
     APP_IMAGE: $CI_REGISTRY_IMAGE/app:$CI_COMMIT_SHA
     DEPLOY_IMAGE: $CI_REGISTRY_IMAGE/deploy:latest
 
-build_app:
+build:
     stage: build
     script:
         - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
         - docker build -t $APP_IMAGE .
         - docker push $APP_IMAGE
-
-build_deploy_image:
-    stage: build
-    script:
-        - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
         - docker build -t $DEPLOY_IMAGE -f deploy/Dockerfile .
         - docker push $DEPLOY_IMAGE
 
-run_tests:
+test:
     stage: test
     script:
-        - 'echo "CRITICAL: No automated tests found. This is a placeholder stage."'
+        - 'echo "CRITICAL: No automated tests found. Placeholder."'
+
+deploy:
+    stage: deploy
+    image: $DEPLOY_IMAGE
+
+before_script:
+    - 'eval $(ssh-agent -s)'
+    - 'echo "$SSH_PRIVATE_KEY_FILE" | base64 -d | ssh-add -'
+    - 'mkdir -p ~/.ssh && chmod 700 ~/.ssh'
+    - 'ssh-keyscan 3.75.211.159 >> ~/.ssh/known_hosts'
+    - 'chmod 644 ~/.ssh/known_hosts'
 
 tag_latest:
     stage: push
     script:
-        - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-        - docker pull $APP_IMAGE
-        - docker tag $APP_IMAGE $CI_REGISTRY_IMAGE/app:latest
-        - docker push $CI_REGISTRY_IMAGE/app:latest
+        - |
+            ssh ubuntu@3.75.211.159 "APP_IMAGE=$APP_IMAGE docker compose up -d"
     rules:
         - if: '$CI_COMMIT_BRANCH == "main"'
