--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,18 +12,24 @@ deploy_to_prod:
 
     script:
         - |
+            # Using a double-quoted "EOF" to allow variable expansion for $GIT_PULL_URL
             ssh -o "StrictHostKeyChecking=no" -o "UserKnownHostsFile=/dev/null" ubuntu@3.75.211.159 << "EOF"
+              # Fail the script immediately if any command fails
               set -e
               
               echo "--- [DEPLOY] Preparing server environment ---"
-              if [ ! -d "webservertaskManager" ]; then
+              # Check for the correct directory name: webservertaskmanager
+              if [ ! -d "webservertaskmanager" ]; then
                 echo "Cloning repository..."
-                git clone "${GIT_PULL_URL}" webservertaskManager
+                # Clone into the correct directory name: webservertaskmanager
+                git clone "${GIT_PULL_URL}" webservertaskmanager
               fi
               
-              cd webservertaskManager
+              # Change into the correct directory name: webservertaskmanager
+              cd webservertaskmanager
               
               echo "--- [DEPLOY] Pulling latest code and configuration ---"
+              # Ensure the remote URL is correct before pulling
               git remote set-url origin "${GIT_PULL_URL}"
               git pull
               
@@ -31,7 +37,8 @@ deploy_to_prod:
               docker compose up --build -d --force-recreate
               
               echo "--- [DEPLOY] Waiting for application to become healthy ---"
-              until [ "$(docker inspect -f {{.State.Health.Status}} webservertaskManager-app-1)" = "healthy" ]; do
+              # Inspect the container with the correct name: webservertaskmanager-app-1
+              until [ "$(docker inspect -f {{.State.Health.Status}} webservertaskmanager-app-1)" = "healthy" ]; do
                   echo "Waiting for app container to be healthy...";
                   sleep 2;
               done
