--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
             - /etc/letsencrypt:/etc/letsencrypt:ro
             - /var/www/html:/var/www/html
-            - ~/frontend:/usr/share/nginx/html/frontend
+            - ./frontend-dist:/usr/share/nginx/html/frontend
         depends_on:
             app:
                 condition: service_healthy
@@ -41,6 +41,11 @@ services:
             - "5432:5432"
         volumes:
             - db_data:/var/lib/postgresql/data
+    certbot:
+        image: certbot/certbot
+        volumes:
+            - /etc/letsencrypt:/etc/letsencrypt
+            - /var/www/html:/var/www/html
 
 volumes:
     db_data:
