--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,38 +6,15 @@ upstream taskmanager_api {
 server {
     listen 80;
     server_name tasks.webservertaskmanager.com;
-    location /.well-known/acme-challenge/ { root /var/www/html; }
-    location / { return 301 https://$host$request_uri; }
-}
 
-server {
-    listen 443 ssl;
-    server_name tasks.webservertaskmanager.com;
-
-    ssl_certificate /etc/letsencrypt/live/tasks.webservertaskmanager.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tasks.webservertaskmanager.com/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    location /auth {
-        proxy_pass http://taskmanager_api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # This location is used by Certbot for the ACME challenge
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
     }
 
-    location /api {
-        rewrite /api/(.*) /$1 break;
-        proxy_pass http://taskmanager_api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
+    # All other traffic gets a temporary response.
+    # We can't redirect to HTTPS yet because it doesn't exist.
     location / {
-        root /usr/share/nginx/html/frontend;
-        try_files $uri /index.html;
+        return 404; # Or serve a simple "site is being configured" page
     }
 }
